<resources>


    <string name="venta">Venta</string>
    <string name="anulacion">Anulacion</string>
    <string name="cierre">Cierre</string>
    <string name="reenviar">Reenviar</string>
    <string name="imprimir">Imprimir</string>
    <string name="hint">hint</string>
    <string name="title_activity_home_nav">HomeNav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
